// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login button functionality - failure (async) 1`] = `
<div
  className="menu-window"
>
  <ul
    className="menu bg-dark w-100"
  >
    <form
      onSubmit={[Function]}
    >
      <h4
        className="mb-4"
      >
        <span
          className="menu-header"
        >
          Welcome to D&D Online Board
        </span>
      </h4>
      <li
        className="mb-3"
      >
        <Link
          to="/home/about"
        >
          <LinkAnchor
            href="/home/about"
            navigate={[Function]}
          >
            <a
              href="/home/about"
              onClick={[Function]}
            >
              <h5>
                What is D&D Online Board? Click here to find out!
              </h5>
            </a>
          </LinkAnchor>
        </Link>
      </li>
      <h6
        className="mb-3"
      >
        Sign In:
      </h6>
      <li>
        <input
          className="input-group-sm form-control"
          name="email"
          placeholder="Email Address"
          type="email"
        />
        <label
          className="error badge badge-danger"
        />
      </li>
      <li>
        <input
          className="input-group-sm form-control mt-3"
          name="password"
          placeholder="Password"
          type="password"
        />
        <label
          className="error badge badge-danger"
        />
      </li>
      <li>
        <button
          className="btn btn-primary form-control mt-3"
          disabled={false}
          type="submit"
        >
          Log In
        </button>
      </li>
      <li
        className="mt-2"
      >
        <Link
          to="/home/register"
        >
          <LinkAnchor
            href="/home/register"
            navigate={[Function]}
          >
            <a
              href="/home/register"
              onClick={[Function]}
            >
              New user? Register
            </a>
          </LinkAnchor>
        </Link>
        <Link
          className="float-right"
          to="/home/forgot_password"
        >
          <LinkAnchor
            className="float-right"
            href="/home/forgot_password"
            navigate={[Function]}
          >
            <a
              className="float-right"
              href="/home/forgot_password"
              onClick={[Function]}
            >
              Forgot password?
            </a>
          </LinkAnchor>
        </Link>
      </li>
      <li>
        <label>
          <span
            className="badge badge-danger"
          >
            Error
          </span>
        </label>
      </li>
    </form>
    <h6
      className="mb-3 mt-3"
    >
      Or:
    </h6>
    <li>
      <button
        className="btn btn-primary form-control"
        disabled={false}
        onClick={[Function]}
      >
        Enter as a Guest
      </button>
      <label
        className="mt-1"
      >
        You will not be able to save your game and continue later.
      </label>
    </li>
  </ul>
</div>
`;

exports[`login button functionality - success (async) 1`] = `""`;

exports[`renders correctly 1`] = `
<div
  className="menu-window"
>
  <ul
    className="menu bg-dark w-100"
  >
    <form
      onSubmit={[Function]}
    >
      <h4
        className="mb-4"
      >
        <span
          className="menu-header"
        >
          Welcome to D&D Online Board
        </span>
      </h4>
      <li
        className="mb-3"
      >
        <Link
          to="/home/about"
        >
          <h5>
            What is D&D Online Board? Click here to find out!
          </h5>
        </Link>
      </li>
      <h6
        className="mb-3"
      >
        Sign In:
      </h6>
      <li>
        <input
          className="input-group-sm form-control"
          name="email"
          placeholder="Email Address"
          type="email"
        />
        <label
          className="error badge badge-danger"
        />
      </li>
      <li>
        <input
          className="input-group-sm form-control mt-3"
          name="password"
          placeholder="Password"
          type="password"
        />
        <label
          className="error badge badge-danger"
        />
      </li>
      <li>
        <button
          className="btn btn-primary form-control mt-3"
          disabled={false}
          type="submit"
        >
          Log In
        </button>
      </li>
      <li
        className="mt-2"
      >
        <Link
          to="/home/register"
        >
          New user? Register
        </Link>
        <Link
          className="float-right"
          to="/home/forgot_password"
        >
          Forgot password?
        </Link>
      </li>
    </form>
    <h6
      className="mb-3 mt-3"
    >
      Or:
    </h6>
    <li>
      <button
        className="btn btn-primary form-control"
        disabled={false}
        onClick={[Function]}
      >
        Enter as a Guest
      </button>
      <label
        className="mt-1"
      >
        You will not be able to save your game and continue later.
      </label>
    </li>
  </ul>
</div>
`;
